updated input files

--- a/input/input.tex
+++ b/input/input.tex
@@ -6,4 +6,4 @@
 \input{input/topology_atomistic}
 \input{input/topology_coarsegrained}
 \input{input/topology_conjseg}
-
+\input{input/orbitals_zindo}
