--- a/newcommands.tex
+++ b/newcommands.tex
@@ -24,6 +24,7 @@
 
 \newcommand{\estat}{\hyperref[calc:estat]{\texttt{estat}}\xspace}
 \newcommand{\dumptraj}{\hyperref[calc:dumptraj]{\texttt{dumptraj}}\xspace}
+\newcommand{\integrals}{\hyperref[calc:integrals]{\texttt{integrals}}\xspace}
 
 \newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
 
