hacked the xml2t2t script; added options for mappin

--- a/input/topology_coarsegrained.tex
+++ b/input/topology_coarsegrained.tex
@@ -17,51 +17,6 @@ An example of the input file for a \dcvt molecule is shown in listing~\ref{list:
 {./input/map.xml}
 
 
-
-%\begin{table}
-{\small 
-\begin{tabular}{p{3cm} p{10cm}}
-\xml tag & Description \\
-\hline
-\texttt{name} & Name of the molecule in the coarse-grained model. Useful for multicomponent systems. \\
-%
-\texttt{ident} & Name (identification) of the molecule in the all-atom representation. This \emph{must} match the molecule name in the atomistic representation (e.g. \gromacs topology). \\
-%
-\texttt{topology} & Section describing the partitioning of the molecule on rigid fragments. Atom and residue names/types \emph{must} correspond to those used in the atomistic representation (e.g. \gromacs topology)\\
-& \\
-\texttt{cg\_beads} & Section describing all rigid fragments of a molecule. \\
-%
-\texttt{cg\_bead} & Section defining one particular rigid fragment. \\
-%
-\texttt{cg\_bead.name} &  The name of the bead. This must be unique for each rigid fragment in a molecule, for example a polymer made of ten repeat units needs ten different name identifiers if each repeat unit is a rigid fragment. \\
-%
-\texttt{cg\_bead.type} &  The type of the rigid fragment. This may be the same for beads which only differ by a hydrogen atom or two to simplify the calculations, while the mapping must take these differences into account. \\
-%
-\texttt{cg\_bead.mapping} & The type of the mapping. Different beads may have the same mapping, since a molecule may contain multiple beads of the same type, but in the bead definition each must correspond to different atoms. \\
-%
-\texttt{cg\_bead.beads} &  List of all atoms belonging to the rigid fragment in the format \texttt{residue number:residue name:atom name}. Depending on the options, the first three atoms might be used to calculate vectors defining the orientation of the rigid fragment. In this case they must not lie on the same axis. Even though the first three atoms in the mapping need not correspond to the first three atoms in the \texttt{*.rtp} or \texttt{*.gro} files, the order must be consistent with the definitions in the \texttt{list\_charges} file. \\
-%
-\texttt{cg\_bead.symmetry} &  The symmetry of the molecule. \texttt{symmetry = 3} corresponds to a fragment with three different moments of inertia of the mass tensor. Used to automatically determine fragment orientation.\\
-& \\
-\texttt{qm} & This section associates rigid fragments (beads) with a particular type of a conjugated segment. \\
-%
-\texttt{qm.crgunitname} &  The name of the conjugated segment the fragment is associated with. \\
-%
-\texttt{qm.bead} & The position of the rigid fragment in the conjugated segment. \\
-& \\
-\texttt{maps} & Section describing maps for all types of rigid fragments. Maps are used to determine the position of a rigid fragment. \\
-%
-\texttt{map} &  Section defining one particular map. \\
-%
-\texttt{map.name} & The map name must correspond to the name used to define the fragments (\texttt{cg\_beads.mapping} tag) . \\
-%
-\texttt{map.weights} & The weighting of the atoms in the rigid fragment. If the mass of the nucleus in atomic mass units is used, the center of the rigid fragment will be its center of mass. The weights must be in the same order as in the corresponding rigid fragment definition (\texttt{cg\_beads.bead} tag).
-\end{tabular}
-}
-%\end{table}
-
-
-
 \ctpmap partitions the system on conjugated segments and rigid fragments:
 \begin{verbatim}
   ctp_map --top topology.tpr -c 15 -cg cgmap.xml --trj traj.trr
@@ -75,3 +30,10 @@ In order to check the mapping one can use the \dumptraj calculator
 \end{verbatim}
 
 This program will read in the state file created by \ctpmap together with a conjugated segment definitions and will create two output trajectory files corresponding to the coarse-grained and back-mapped topologies. The back-maping of the coase-grained topology is performed using stored rigid fragment positions and orientations. It is suggested to view all three trajectories (atomistic, coarse grained, and quantum) on top of each other to check the mapping.
+
+
+%\begin{table}
+%{\small 
+%\begin{tabular}{p{3cm} p{10cm}}
+% 
+%\end{tabular}
