--- a/manual.tex
+++ b/manual.tex
@@ -10,12 +10,14 @@
 \usepackage[numbers,comma,sort&compress]{natbib}
 \usepackage{graphicx}
 %\usepackage{xstring}
-\usepackage{listings,xcolor,courier}
+\usepackage{listings,courier}
 %\usepackage{draftcopy}
 \usepackage{longtable}
 \usepackage{paralist}
 %\usepackage{fancyvrb}
 \usepackage{listings}
+\usepackage{array}
+\usepackage[table]{xcolor}
 
 \definecolor{webgreen}{rgb}{0,.5,0}
 \definecolor{webbrown}{rgb}{.6,0,0}
