--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -7,8 +7,23 @@
 \section{Calculators}
 \label{ref:calculators}
 \input{reference/calculators/all}
+\vfill
 
 \section{Options}
 \label{ref:options}
-\input{reference/xml/ctp_listcharges.xml}
+%\setdefaultleftmargin{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}{0.8em}
 
+\subsection{Mapping file}
+\rowcolors{1}{invisiblegray}{white}
+{\small 
+\input{reference/xml/map.xml}
+}
+\vfill
+
+\subsection{Conjugated segments}
+\input{reference/xml/segments.xml}
+\vfill
+
+\subsection{Calculator options}
+\input{reference/xml/options.xml}
+\vfill
