--- a/titlepage.tex
+++ b/titlepage.tex
@@ -47,6 +47,6 @@ The core development is currently taking place at the Max Planck Institute for P
 
 \section*{Copyright}
 \votcact is free software. The entire package is available under the Apache License. For details, check
-the LICENSE file in the source code. The \votcact source code is available on our homepage, \htmladdnormallink{\color{black}\large{www.votca.org}}{http://www.votca.org}.
+the LICENSE file in the source code. The \votcact source code is available on our homepage, \htmladdnormallink{\color{black}www.votca.org}{http://www.votca.org}.
 
 \vfill
