--- a/manual.tex
+++ b/manual.tex
@@ -44,7 +44,8 @@ pdfpagemode=UseNone]{hyperref}
 \usepackage{type1cm}
 
 \def\bibsection{%
-    \section*{References}%
+    \chapter*{Bibliography}%
+    \addcontentsline{toc}{chapter}{Bibliography}
 }
 
 \begin{document}
