included the DFT section to Interfaces

--- a/programs/dft.tex
+++ b/programs/dft.tex
@@ -1,4 +1,6 @@
-\subsection{Density-functional method}
+\subsection{Transfer integrals: \gaussian and \turbomole}
+
+Apartm from semi-empirical methods, we also provide interfaces for a DFT-based evaluation of electronic coupling elements.
 
 \begin{itemize}
 \item {\it not sure about directory structure yet, using {\tt
