included the DFT section to Interfaces

--- a/programs/dft.tex
+++ b/programs/dft.tex
@@ -1,4 +1,4 @@
-\subsection{Transfer integrals: \gaussian and \turbomole}
+\subsection{Electronic coupling: \gaussian and \turbomole}
 
 Apartm from semi-empirical methods, we also provide interfaces for a DFT-based evaluation of electronic coupling elements.
 
