draft of the xml description of conjugated segments

--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -21,9 +21,15 @@
 \vfill
 
 \subsection{Conjugated segments}
+\rowcolors{1}{invisiblegray}{white}
+{\small 
 \input{reference/xml/segments.xml}
+}
 \vfill
 
 \subsection{Calculator options}
+\rowcolors{1}{invisiblegray}{white}
+{\small 
 \input{reference/xml/options.xml}
+}
 \vfill
