refrence section extended

--- a/manual.tex
+++ b/manual.tex
@@ -73,12 +73,12 @@ pdfpagemode=UseNone]{hyperref}
 \tableofcontents
 %\cleardoublepage
 \mainmatter
-\segmentopt{crgunit_type.ChargeUnitType.posname}
 \include{theory/introduction}
 \include{theory/theory}
 \include{input/input}
 
 \chapter{Programs and interfaces}
+\label{sec:prog_interf}
 \include{programs/programs}
 \include{programs/interfaces}
 \include{reference/reference}
