--- a/reference/reference.tex
+++ b/reference/reference.tex
@@ -1,5 +1,8 @@
 \chapter{Manual pages}
-
+%
+% if you want to refer to any of the tags specified here use the following command
+% \segmentopt{crgunit_type.ChargeUnitType.posname}
+%
 \section{Programs}
 \label{ref:programs}
 \input{reference/programs/all}
