updated options files to new names (moo)

--- a/input/topology_conjseg.tex
+++ b/input/topology_conjseg.tex
@@ -21,7 +21,7 @@ Conjugated segments are described in a separate \xml file. An example for \dcvt 
   showstringspaces=false,
   columns=fullflexible,
   commentstyle=\color{gray}\rmfamily\itshape,
-  morekeywords={crgunit_type,ChargeUnitType,posname,orbname,basisset,transorb,reorg,nameneutr,namecrg,energy,beadconj,molname,name,monomer_atom_map,monomer_atom_weights},
+  morekeywords={segments,segment,coordinates,orbitals,basisset,torbital,reorganization,qneutral,qcharged,energy,beadconj,molname,name,map,weights},
 }
 
 \lstinputlisting[
