--- a/programs/moo.tex
+++ b/programs/moo.tex
@@ -15,7 +15,7 @@ Its input requires a description of two conjugated segments (\texttt{benzene.xml
   label=list:benzene_xml,
   stringstyle=\ttfamily\footnotesize,
   showstringspaces=false,
-  caption={\small \texttt{benzene.xml} file with the description of the benzene molecule, which is also a single conjugated segment and a rigid fragment.}] {./fig/moo/moo_overlap/benzene.xml}
+  caption={\small \texttt{benzene.xml} file with the description of the benzene molecule, which is also a single conjugated segment and a rigid fragment.}] {./programs/benzene.xml}
 
 \vskip 0.1cm
 
