reference to required options [needs improvement]

--- a/newcommands.tex
+++ b/newcommands.tex
@@ -32,4 +32,6 @@
 
 \newcommand{\segmentref}[1]{segments.#1}
 \newcommand{\segmentopt}[1]{\hyperlink{\segmentref{#1}}{\StrSubstitute{#1}{_}{\_}}\xspace}
+\newcommand{\calcref}[1]{#1}
+\newcommand{\calcopt}[1]{\hyperlink{\calcref{#1}}{\StrSubstitute{#1}{_}{\_}}\xspace}
 
