fixing the references

--- a/newcommands.tex
+++ b/newcommands.tex
@@ -18,15 +18,15 @@
 
 \newcommand{\calculator}{\hyperref[sec:calculators]{calculator}\xspace}
 
+\newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
+
 \newcommand{\overlap}{\hyperref[prog:moo_overlap]{\texttt{moo\_overlap}}\xspace}
 \newcommand{\ctprun}{\hyperref[prog:ctp_run]{\texttt{ctp\_run}}\xspace}
 \newcommand{\ctpmap}{\hyperref[prog:ctp_map]{\texttt{ctp\_map}}\xspace}
 
-\newcommand{\estat}{\hyperref[calc:estat]{\texttt{estat}}\xspace}
+\newcommand{\ecoulomb}{\hyperref[calc:ecoulomb]{\texttt{ecoulomb}}\xspace}
 \newcommand{\dumptraj}{\hyperref[calc:dumptraj]{\texttt{dumptraj}}\xspace}
 \newcommand{\integrals}{\hyperref[calc:integrals]{\texttt{integrals}}\xspace}
-
-\newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
 
 \newcommand{\suggestion}[1]{{\color{red}SUGGESTION: #1}}
 
