--- a/input/topology_conjseg.tex
+++ b/input/topology_conjseg.tex
@@ -26,7 +26,7 @@ Conjugated segments are described in a separate \xml file. An example for \dcvt 
 
 \lstinputlisting[
  label=list:conjugated_segments, 
- caption={\small \xml file describing conjugated segments.
+ caption={\small \xml file describing conjugated segments. Note that  the mapping and weights for each segment are separated by '':''. 
 }]%
 {./input/segments.xml}
 \clearpage
