md2qm->ctp + added the bib file

--- a/manual.tex
+++ b/manual.tex
@@ -32,7 +32,7 @@ filecolor=webbrown, %defined below
 citecolor=webgreen, %defined below
 pdftitle={VOTCA-CT manual},
 pdfauthor={},
-pdfsubject={VOTCA-CT},
+pdfsubject={VOTCA-CTP},
 pdfkeywords={charge transport organic semiconductors},
 bookmarksopen=false,
 pdfpagemode=UseNone]{hyperref}
