--- a/newcommands.tex
+++ b/newcommands.tex
@@ -14,7 +14,7 @@
 
 \newcommand{\xyz}{\texttt{geometry.xyz}\xspace}
 \newcommand{\orb}{\texttt{zindo.orb}\xspace}
-\newcommand{\votcact}{{\MakeUppercase{votca-ct}}\xspace}
+\newcommand{\votcactp}{{\MakeUppercase{votca-ctp}}\xspace}
 
 \newcommand{\calculator}{\hyperref[sec:calculators]{calculator}\xspace}
 
