--- a/titlepage.tex
+++ b/titlepage.tex
@@ -3,7 +3,7 @@
 %\center{\fontsize{4cm}{5cm}\selectfont VOTCA-CT}
 %\center{\fontsize{1.5cm}{3cm}\selectfont USER MANUAL}
 
-\center{\huge \sc Charge Transport Simulations}
+\center{\huge \sc VOTCA-CTP \\ \vspace*{1cm} Charge Transport Simulations}
 \vspace*{1cm}
 \center{\Large \sc User Manual}
 
@@ -46,7 +46,7 @@ Development of this software depends on academic research grants. If you are usi
 The core development is currently taking place at the Max Planck Institute for Polymer Research, Mainz, Germany.
 
 \section*{Copyright}
-\votcact is free software. The entire package is available under the Apache License. For details, check
-the LICENSE file in the source code. The \votcact source code is available on our homepage, \htmladdnormallink{\color{black}www.votca.org}{http://www.votca.org}.
+\votcactp is free software. The entire package is available under the Apache License. For details, check
+the LICENSE file in the source code. The \votcactp source code is available on our homepage, \htmladdnormallink{\color{black}www.votca.org}{http://www.votca.org}.
 
 \vfill
