neighbot list added

--- a/newcommands.tex
+++ b/newcommands.tex
@@ -18,6 +18,15 @@
 
 \newcommand{\calculator}{\hyperref[sec:calculators]{calculator}\xspace}
 
+\newcommand{\xmloptions}{\texttt{options.xml}\xspace}
+\newcommand{\xmlsegments}{\texttt{segments.xml}\xspace}
+\newcommand{\sqlstate}{\texttt{state.db}\xspace}
+
+\newcommand{\opt}{\texttt{{ -}-opt}\xspace}
+\newcommand{\seg}{\texttt{{ -}-s}\xspace}
+\newcommand{\sql}{\texttt{{ -}-db}\xspace}
+\newcommand{\exe}{\texttt{{ -}-exec}\xspace}
+
 \newcommand{\refcalc}{\hyperref[ref:calculators]{calculators}\xspace}
 
 \newcommand{\overlap}{\hyperref[prog:moo_overlap]{\texttt{moo\_overlap}}\xspace}
@@ -35,3 +44,4 @@
 \newcommand{\calcref}[1]{#1}
 \newcommand{\calcopt}[1]{\hyperlink{\calcref{#1}}{\StrSubstitute{#1}{_}{\_}}\xspace}
 
+\newcommand{\calc}[1]{\hyperref[calc:#1]{\texttt{#1}}\xspace}
