--- a/theory/theory.tex
+++ b/theory/theory.tex
@@ -4,8 +4,9 @@
 \input{theory/workflow}
 \input{theory/morphology}
 \input{theory/fragments}
+\input{theory/neighborlist}
 
-\section{Electronic coupling}
+\section{Electronic coupling elements}
 \label{sec:transfer_integrals}
 \input{theory/moo}
 \input{theory/dft}
