--- a/theory/energetic_disorder.tex
+++ b/theory/energetic_disorder.tex
@@ -24,4 +24,4 @@ The contribution to $E_i^\text{el}$ from the first coordination shell is then un
 \end{equation}
 where the parameter $s$ is the inverse screening length. For a monovalent ion in water, for example, $\epsilon_{\text{s}}=80$ and $s=3\,\textrm{nm}^{-1}$~\cite{daggett_molecular_1991}. This screening function ensures that neighboring atoms interact via an unscreened Coulomb potential ($\epsilon \sim 1$) while the electrostatic interaction between atoms at large separations is screened as in the bulk. 
 
-Evaluation of the electrostatic contribution is provided by the \ecoulomb \calculator.
+Evaluation of the electrostatic contribution is provided by the \calc{ecoulomb} \calculator.
